--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,27 @@
   color: #61dafb;
 }
 
+.url-input {
+  width:500px;
+}
+
+.page-section {
+  display: flex;
+}
+
+.input-section {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.submit-btn {
+  justify-content: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
